# prismctl

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.sh
crates/ekko-cli/: Cargo.toml
crates/ekko-cli/src/: app_config.rs  errors.rs  icons.rs  main.rs  prompted.rs
crates/ekko-cli/src/interactive/: menu.rs  mod.rs  style.rs  utils.rs  wizard_claude.rs  wizard_codex.rs  wizard_gemini.rs  wizard_init.rs
crates/ekko-cli/src/legacy/: commands.rs
crates/ekko-cli/src/quick/: init.rs  update.rs
crates/ekko-core/: Cargo.toml
crates/ekko-core/assets/claude/output-styles/en/: ekko-ojousama-engineer.md
crates/ekko-core/assets/claude/output-styles/zh-CN/: ekko-engineer-professional.md  ekko-rem-engineer.md
crates/ekko-core/assets/codex/agents/en/: ekko-engineer-professional.md  ekko-laowang-engineer.md  ekko-leibus-engineer.md  ekko-nekomata-engineer.md  ekko-rem-engineer.md
crates/ekko-core/assets/codex/agents/zh-CN/: ekko-laowang-engineer.md  ekko-leibus-engineer.md  ekko-nekomata-engineer.md  ekko-ojousama-engineer.md
crates/ekko-core/assets/gemini/en/: GEMINI.md  PROJECT_GEMINI.md  WORKFLOWS.md
crates/ekko-core/assets/gemini/zh-CN/: GEMINI.md  PROJECT_GEMINI.md  WORKFLOWS.md
crates/ekko-core/assets/project/en/: EKKO_PLAN_README.md
crates/ekko-core/assets/project/zh-CN/: EKKO_PLAN_README.md
crates/ekko-core/assets/skills/codebase-visualizer/: SKILL.md
crates/ekko-core/assets/skills/codebase-visualizer/scripts/: visualize.py
crates/ekko-core/src/: changeset.rs  claude.rs  codex.rs  installer.rs  json_text.rs  managed_block.rs  paths.rs  project.rs  providers.rs  skill.rs  templates.rs  toml_text.rs
crates/prismctl-cli/: Cargo.toml
crates/prismctl-cli/src/: app_config.rs  errors.rs  icons.rs  main.rs  prompted.rs
crates/prismctl-cli/src/interactive/: menu.rs  utils.rs  wizard_claude.rs  wizard_codex.rs  wizard_gemini.rs  wizard_init.rs
crates/prismctl-cli/src/legacy/: commands.rs
crates/prismctl-cli/src/quick/: init.rs  update.rs
crates/prismctl-core/: Cargo.toml
crates/prismctl-core/assets/claude/output-styles/en/: prismctl-laowang-engineer.md  prismctl-ojousama-engineer.md
crates/prismctl-core/assets/codex/agents/en/: prismctl-engineer-professional.md  (+3 more)
crates/prismctl-core/assets/gemini/en/: GEMINI.md  PROJECT_GEMINI.md  WORKFLOWS.md
crates/prismctl-core/assets/gemini/zh-CN/: GEMINI.md  PROJECT_GEMINI.md  WORKFLOWS.md
crates/prismctl-core/assets/project/en/: PRISMCTL_PLAN_README.md
crates/prismctl-core/assets/project/zh-CN/: PRISMCTL_PLAN_README.md
crates/prismctl-core/assets/skills/explain-code/: SKILL.md
crates/prismctl-core/assets/skills/pr-summary/: SKILL.md
crates/prismctl-core/src/: changeset.rs  claude.rs  codex.rs  gemini.rs  installer.rs  lib.rs  managed_block.rs  mcp.rs  paths.rs  project.rs  skill.rs  templates.rs  toml_text.rs
crates/prismctl-i18n/: Cargo.toml  README.md  build.rs
crates/prismctl-i18n/i18n/en/: cli.ftl  common.ftl  menu.ftl  wizard.ftl
crates/prismctl-i18n/i18n/zh-CN/: cli.ftl  common.ftl  menu.ftl  wizard.ftl
crates/prismctl-i18n/src/: lib.rs
(+123 files in other folders)
