[package]
name = "ekko"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["thornboo <thornboo@users.noreply.github.com>"]
description = "Unified CLI for managing AI coding tools (Codex, Claude Code, Gemini CLI)"
repository = "https://github.com/thornboo/ekko"
homepage = "https://github.com/thornboo/ekko"
keywords = ["cli", "ai", "codex", "claude", "gemini"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "ekko"
path = "src/main.rs"

[dependencies]
ekko-core = { path = "../ekko-core" }
inquire = "0.9.2"
devicons = "0.6.12"
ekko-i18n = { path = "../ekko-i18n" }
