[package]
name = "prismctl"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["thornboo <thornboo@users.noreply.github.com>"]
description = "Unified CLI for managing AI coding tools (Codex, Claude Code, Gemini CLI)"
repository = "https://github.com/thornboo/prismctl"
homepage = "https://github.com/thornboo/prismctl"
keywords = ["cli", "ai", "codex", "claude", "gemini"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "prismctl"
path = "src/main.rs"

[dependencies]
prismctl-core = { path = "../prismctl-core" }
inquire = "0.9.2"
devicons = "0.6.12"
prismctl-i18n = { path = "../prismctl-i18n" }
